--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,24 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
+@import url('https://fonts.googleapis.com/css2?family=Vesper+Libre:wght@500&display=swap');
+:root{
+    --primary:#000;
+    --secondary: white;
+    --error: #ff4a4a;
+  }
+  
+  /* base styles & title */
+  body{
+    margin: 0;
+    color: var(--secondary);
+    /*background-image: url("./images/background.jpg");*/
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
+    background-position: top left;
+    background-color: #000;
+  }
+  .App{
+    max-width: 960px;
+    margin: 0 auto;
+    border-radius: 10px;
+    height: 100%;
+  }
